# orx-pseudo-default-derive

./: Cargo.toml  README.md
src/: derive.rs  lib.rs
tests/: struct_named_fields.rs  struct_no_fields.rs  struct_unnamed_fields.rs
