[package]
name = "orx-pseudo-default-derive"
version = "1.0.0"
edition = "2021"
authors = ["orxfun <orx.ugur.arikan@gmail.com>"]
description = "Derives the PseudoDefault trait that allows to create a cheap default instance of a type, which does not claim to be useful."
license = "MIT"
repository = "https://github.com/orxfun/orx-pseudo-default-derive/"
keywords = ["default", "pseudo", "uninitialized", "swap"]
categories = ["data-structures", "rust-patterns", "no-std"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.74", features = ["derive", "parsing"] }
quote = { version = "1.0.36" }

[dev-dependencies]
orx-pseudo-default = { version = "1.3", default-features = false }
